# voyager-compiler

./: .gitattributes  .gitignore  README.md  pyproject.toml  setup_shell.sh
benchmarks/: .gitignore  common.py  latency_dram_chart.py  per_module_latency_chart.py  runner.py
examples/audio_classification/: honk_train.py  superb_ks.py
examples/imagenet/: main.py  model_registry.py  timm_bench.py
examples/language_modeling/: prepare_model.py  quantization_configs.py  run_clm.py  wikitext.py
examples/question_answering/: run_qa_no_trainer.py
examples/semantic_segmentation/: ade20k.py
examples/speech_recognition/: librispeech_asr.py
examples/text_classification/: run_glue_no_trainer.py
src/interstellar/: __init__.py  buffer_enum.py  cache.py  cost_model.py  extract_input.py  layer.py  loop_enum.py  mapping_point.py  mapping_point_generator.py  optimizer.py  resource.py  schedule.py  utils.py
src/quantized_training/: __init__.py  decomposed.py  fake_quantize.py  pt2e_utils.py  quantize_pt2e.py
src/quantized_training/codegen/: banking.py  mapping.py  mapping_utils.py  memory.py  shape_prop.py
src/voyager_compiler/: __init__.py  cli_args.py  decomposed.py  fake_quantize.py  hardware.py  histogram.py  layout_ops.py  llm_utils.py  pt2e_utils.py  qconfig.py  quantization_mappings.py  quantize.py  quantize_pt2e.py  training_args.py  utils.py
src/voyager_compiler/approx/: app_binding.py  app_param.py  app_template.py
src/voyager_compiler/codegen/: __init__.py  aten_classifier.py  banking.py  compile_protos.sh  mapping.py  mapping_utils.py  memory.py  normalize.py  param.pb.cc  tiler.py  (+6 more)
test/: run_ci.py  test_attention_lowering.py  test_codegen.py  test_gemm_lowering.py
tools/: gen_aten_classifier.py
tools/artifacts/: aten_op_examples.json  aten_ops_by_model.jsonl  aten_ops_histogram.json  corpus_stats.json
(+51 files in other folders)
