[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "voyager-compiler"
version = "0.2.0"
description = "A Machine Learning Compiler with native quantization support"
readme = "README.md"
authors = [
  { name = "Jeffrey Yu", email = "jeffreyy@stanford.edu" },
]
requires-python = ">=3.12"

# STABILITY FIRST: Exact versions enforced where critical.
dependencies = [
    "accelerate==1.12.0",
    "datasets==4.5.0",
    "evaluate",
    "graphviz",
    "jiwer",
    "librosa",
    "matplotlib",
    "peft==0.18.1",
    "protobuf",
    "scikit-learn",
    "scipy",
    "sentencepiece",
    "soundfile",
    "tabulate",
    "timm",
    "torch==2.6.0",
    "torchao",
    "transformers==5.1.0",
    "wandb"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"voyager_compiler" = ["*.txt", "*.json"]
